debut prog fullbody + maj style

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 			<h2>Votre coach partout, tout le temps 💪</h2>
 		</header>
 		<nav>
-			<h3>Construire mon programme</h3>
+			<h3>Construire mon programme d'entrainement</h3>
 		</nav>
 		<section>
 			<article>
